--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
           </div>
           </div>
           </div>
-           <button class="vm-btn">
-            View More
-          </button>
+          <a href="https://www.facebook.com/tribhuwanshantischool"><button class="vm-btn">
+        View More
+      </button></a>
 
           <div class="Gallery-slider-control">
             <div class="swiper-button-prev slider-arrow">
